// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders (disabled) Slider correctly 1`] = `
<div
  className=""
  id="slider-1"
>
  <div
    className=""
  >
    <div
      className=""
    />
    <div
      className=""
    >
      <div
        className="ms-Slider-track"
        style={
          Object {
            "borderRadius": "99px",
            "left": 0,
            "transition": "none",
            "width": "50%",
          }
        }
      />
    </div>
    <div
      className=""
      style={
        Object {
          "transform": "translateX(50%)",
          "transition": "none",
        }
      }
    >
      <div
        aria-disabled={true}
        aria-valuemax={10}
        aria-valuemin={0}
        aria-valuenow={5}
        aria-valuetext="5"
        className="ms-Slider-thumb"
        role="slider"
      />
    </div>
    <div
      className=""
    />
  </div>
</div>
`;

exports[`Slider renders Slider correctly 1`] = `
<div
  className=""
  id="slider-1"
  onKeyDown={[Function]}
  onPointerDown={[Function]}
>
  <div
    className=""
  >
    <div
      className=""
    />
    <div
      className=""
    >
      <div
        className="ms-Slider-track"
        style={
          Object {
            "borderRadius": "99px",
            "left": 0,
            "transition": "none",
            "width": "50%",
          }
        }
      />
    </div>
    <div
      className=""
      style={
        Object {
          "transform": "translateX(50%)",
          "transition": "none",
        }
      }
    >
      <div
        aria-valuemax={10}
        aria-valuemin={0}
        aria-valuenow={5}
        aria-valuetext="5"
        className="ms-Slider-thumb"
        role="slider"
        tabIndex={0}
      />
    </div>
    <div
      className=""
    />
  </div>
</div>
`;

exports[`Slider renders Slider with origin correctly 1`] = `
Array [
  <div
    className=""
    id="slider-1"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
    >
      <div
        className=""
      />
      <div
        className=""
      >
        <div
          className="ms-Slider-track"
          style={
            Object {
              "borderRadius": "0px 99px 99px 0px",
              "left": "20%",
              "transition": "none",
              "width": "30%",
            }
          }
        />
      </div>
      <div
        className=""
        style={
          Object {
            "transform": "translateX(50%)",
            "transition": "none",
          }
        }
      >
        <div
          aria-valuemax={10}
          aria-valuemin={0}
          aria-valuenow={5}
          aria-valuetext="5"
          className="ms-Slider-thumb"
          role="slider"
          tabIndex={0}
        />
      </div>
      <div
        className=""
      />
    </div>
  </div>,
  <div
    className=""
    id="slider-2"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
    >
      <div
        className=""
      />
      <div
        className=""
      >
        <div
          className="ms-Slider-track"
          style={
            Object {
              "borderRadius": "0px 0px 99px 99px",
              "height": "30%",
              "top": "20%",
              "transition": "none",
            }
          }
        />
      </div>
      <div
        className=""
        style={
          Object {
            "transform": "translateY(50%)",
            "transition": "none",
          }
        }
      >
        <div
          aria-valuemax={10}
          aria-valuemin={0}
          aria-valuenow={5}
          aria-valuetext="5"
          className="ms-Slider-thumb"
          role="slider"
          tabIndex={0}
        />
      </div>
      <div
        className=""
      />
    </div>
  </div>,
]
`;

exports[`Slider renders Slider with tooltip correctly 1`] = `
<div>
  <div
    class=""
    id="slider-1"
  >
    <div
      class=""
    >
      <div
        class=""
      />
      <div
        class=""
      >
        <div
          class="ms-Slider-track"
          style="left: 0px; width: 50%; border-radius: 99px; transition: none;"
        />
      </div>
      <div
        class=""
        style="transform: translateX(50%); transition: none;"
      >
        <div
          aria-labelledby="tooltip-2"
          aria-valuemax="10"
          aria-valuemin="0"
          aria-valuenow="5"
          aria-valuetext="5"
          class="ms-Slider-thumb"
          role="slider"
          tabindex="0"
        />
        <span
          hidden=""
        />
      </div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`Slider renders vertical Slider correctly 1`] = `
<div
  className=""
  id="slider-1"
  onKeyDown={[Function]}
  onPointerDown={[Function]}
>
  <div
    className=""
  >
    <div
      className=""
    />
    <div
      className=""
    >
      <div
        className="ms-Slider-track"
        style={
          Object {
            "borderRadius": "99px",
            "height": "50%",
            "top": 0,
            "transition": "none",
          }
        }
      />
    </div>
    <div
      className=""
      style={
        Object {
          "transform": "translateY(50%)",
          "transition": "none",
        }
      }
    >
      <div
        aria-valuemax={10}
        aria-valuemin={0}
        aria-valuenow={5}
        aria-valuetext="5"
        className="ms-Slider-thumb"
        role="slider"
        tabIndex={0}
      />
    </div>
    <div
      className=""
    />
  </div>
</div>
`;
